All_Component_DX/force-app/main/default/objects/SFM_Event__c/SFM_Event__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Object to store event details.</description>
    <label>SFM Event</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFM Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>