All_Component_DX/force-app/main/default/objects/SFM_Event__c/fields/Code_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Code_Snippet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Snippet</label>
    <referenceTo>Code_Snippet__c</referenceTo>
    <relationshipLabel>SFM Events</relationshipLabel>
    <relationshipName>SFM_Events</relationshipName>
    <type>Lookup</type>
</CustomField>