All_Component_DX/force-app/main/default/objects/SFM_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the web service call or custom link used in APL process</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>