All_Component_DX/force-app/main/default/objects/SFM_Event__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Text Id required to load standard events.</description>
    <label>Event Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>