All_Component_DX/force-app/main/default/objects/SFM_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After Add Record</fullName>
            </value>
            <value>
                <fullName>Button Click</fullName>
            </value>
            <value>
                <fullName>Field Change</fullName>
            </value>
            <value>
                <fullName>Field Exit</fullName>
            </value>
            <value>
                <fullName>On Load</fullName>
            </value>
            <value>
                <fullName>Before Save/Update</fullName>
            </value>
            <value>
                <fullName>After Save/Update</fullName>
            </value>
            <value>
                <fullName>Before Save/Insert</fullName>
            </value>
            <value>
                <fullName>After Save/Insert</fullName>
            </value>
            <value>
                <fullName>After Receipt</fullName>
            </value>
            <value>
                <fullName>After Delivery</fullName>
            </value>
            <value>
                <fullName>After Picking</fullName>
            </value>
            <value>
                <fullName>After Shipment</fullName>
            </value>
            <value>
                <fullName>After Closure</fullName>
            </value>
            <value>
                <fullName>SFM Custom Action</fullName>
            </value>
            <value>
                <fullName>Before Entitlement</fullName>
            </value>
            <value>
                <fullName>Before Routing Calculation</fullName>
            </value>
            <value>
                <fullName>Before RMA Generation</fullName>
            </value>
            <value>
                <fullName>After RMA Generation</fullName>
            </value>
            <value>
                <fullName>iPad_Extended_Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>