All_Component_DX/force-app/main/default/objects/SFM_Event__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Method name of the web service call</description>
    <label>Target Call Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>