All_Component_DX/force-app/main/default/objects/SFM_Event__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>Namespace of the web service call, if applicable</description>
    <label>Target Call Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>