All_Component_DX/force-app/main/default/objects/SFM_Event__c/fields/Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>Page_Layout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page Layout</label>
    <referenceTo>Page_Layout__c</referenceTo>
    <relationshipLabel>SFM Event</relationshipLabel>
    <relationshipName>SFM_Event</relationshipName>
    <type>Lookup</type>
</CustomField>