All_Component_DX/force-app/main/default/objects/SFM_Event__c/fields/ServiceMax_Process__c.field-meta.xml
<CustomField>
    <fullName>ServiceMax_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the APL process</description>
    <label>ServiceMax Process</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>SFM Events</relationshipLabel>
    <relationshipName>SFM_Events</relationshipName>
    <type>Lookup</type>
</CustomField>